@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-25T08:13:44Z",
+  "timestamp" : "2023-08-27T08:12:43Z",
   "count_outdated" : 169,
   "uniques_outdated" : 143,
-  "count" : 175,
-  "uniques" : 149,
+  "count" : 176,
+  "uniques" : 150,
   "clones" : [
     {
       "timestamp": "2023-08-15T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2023-08-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
