@@ -1,5 +1,5 @@
 {
-  "count": 6,
+  "count": 7,
   "uniques": 1,
   "clones": [
     {
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2023-08-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
